--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@langchain/community": "^0.0.26",
     "@langchain/core": "^0.1.35",
+    "@qdrant/js-client-rest": "^1.10.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -26,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/dom-speech-recognition": "^0.0.4",
     "ai": "^2.2.37",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "emoji-mart": "^5.5.2",
